More work on the Americsa + changing League of Nations to League of American States

--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -227,24 +227,73 @@ hawaii.15.d:0 "The arrival of CSA agitators had enticed the workers of Hawaii in
 hawaii.15.a:0 "We must reform."
 hawaii.15.b:0 "Arresting the CSA agitators should do it."
 hawaii.16.t:0 "Trade Union of Hawaii"
-hawaii.16.d:0 "The Trade Union of Hawaii had been slowly gaining power since the Hawaiian government had instituted reforms. The CSA government was divided as to whether this was enough or not. Many believed that the islands should be forced to adopt the ideals of the CSA but there are many who see the islands as making a natural progression to Syndicalism."
+hawaii.16.d:0 "The Pinapple Union of Hawaii had been slowly gaining power since the Hawaiian government had instituted reforms. The CSA government was divided as to whether this was enough or not. Many believed that the islands should be forced to adopt the ideals of the CSA but there are many who see the islands as making a natural progression to Syndicalism."
 hawaii.16.a:0 "Demand Hawaii reforms"
 hawaii.16.b:0 "Let their revolution evolve"
 hawaii.17.t:0 "Trade Union of Hawaii"
 hawaii.17.d:0 "Since the reforms on the island the trade unionists have been gaining more and more power. The CSA had been assisting in the organization of the unions and had been pressuring the Hawaii government for more reforms. The reforms that were proposed would make the islands a virtual puppet of the CSA and are seen by some as just one step to annexation by the CSA. While many were resistant to both ideas, many more saw that they had little choice in the matter"
 hawaii.17.a:0 "Bow to the CSA reforms"
-hawaii.17.b:0 "We can not fight fate, let us rejoin America."
 hawaii.17.c:0 "We will never submit to the CSA"
 hawaii.18.t:0 "Hawaii Becomes a CSA Protectorate"
 hawaii.18.d:0 "Hawaii has allowed the CSA government control of its policies to ensure the fair treatment of the workers there. CSA officials are already on their way to the island to take control of the government."
 hawaii.18.a:0 "Forward the revolution!"
-hawaii.19.t:0 "Hawaii joins America"
-hawaii.19.d:0 "Facing constant pressure by the CSA agents in Hawaii, the government of Hawaii has sent a proposal to the mainland seeking to join the CSA. We should accept the proposal and bring our comrades back into our fold once more. Long live the Hawaiian Workers!"
-hawaii.19.a:0 "We welcome our Hawaiian comrades!"
-hawaii.20.t:0 "Hawaii Refuses CSA Help"
-hawaii.20.d:0 "The islands of Hawaii have refused to allow the CSA to mediate the labour issues on the island. They have refused to listen to the issues of the workers and have threatened the CSA representatives that have been sent there. The people are crying out for the government to take action to support the workers in Hawaii but some are also sceptical about how well the government could persecute a war against such a distant target."
-hawaii.20.a:0 "War for the workers!"
-hawaii.20.b:0 "Peace will work better"
+hawaii.19.t:0 "Hawaii Refuses CSA Help"
+hawaii.19.d:0 "The islands of Hawaii have refused to allow the CSA to mediate the labour issues on the island. They have refused to listen to the issues of the workers and have threatened the CSA representatives that have been sent there. The people are crying out for the government to take action to support the workers in Hawaii but some are also sceptical about how well the government could persecute a war against such a distant target."
+hawaii.19.a:0 "War for the workers!"
+hawaii.19.b:0 "Peace will work better"
+hawaii.20.t:0 "Revolutionary Greetings From Hawaii"
+hawaii.20.d:0 "While we were fighting to bring the American Revolution over across the sea our comrades in Hawaii were also working to bring their own revolution to fruition. The Hawaiians have overthrown the plantation system and taken control of the island. We should extend our greetings and protection to the Hawaiians to prevent the reactionaries nations from trying to destroy the Hawaiian Revolution. "
+hawaii.20.a:0 "We shall protect you comrades!"
+hawaii.21.t:0 "Hawaii Pettions the League of American States"
+hawaii.21.d:0 "Hawaii has recently sent a petition to Washington to join the League of American States. Should we welcome them into the League of American States or not?"
+hawaii.21.a:0 "Welcome them into the League"
+hawaii.21.b:0 "We don't need Hawaii"
+hawaii.22.t:0 "Hawaii in the League of American States"
+hawaii.22.d:0 "The Americans have accepted our petition to join the League of American States. This is a great day, and with the mainland Americans at our side our independence is now secured. "
+hawaii.22.a:0 "Welcome Friends!"
+hawaii.23.t:0 "Petition is Rejected"
+hawaii.23.d:0 "The Americans have rejected our petition to join the League of American States. We are on our own it seems!"
+hawaii.23.a:0 "We are on our own!"
+hawaii.24.t:0 "Dealing Syndicalist Hawaii"
+hawaii.24.d:0 "The civil war is over in America and it looks like our comrades have failed to bring the revolution there. Not surprisingly the Americans have taken a dim view against our own revolution and are demanding that we dismantle the revolution or face their might."
+hawaii.24.a:0 "We can not take that risk"
+hawaii.24.b:0 "The Revolution goes on!"
+hawaii.25.t:0 "Peace and Order has returned to Hawaii"
+hawaii.25.d:0 "Our demands to Hawaii has been accepted and a new government is in charge that shall prevent the island from being held by the syndicalists. We shall naturally help over see the new republic to make sure that the syndicalist threat never surfaces again in Hawaii."
+hawaii.25.a:0 "Peace and Order has been restored to the island"
+hawaii.26.t:0 "They Refuse!"
+hawaii.26.d:0 "The foolish Hawaiians have refused to get rid of their syndicalist government. The military largely agrees that military action must be taken to restore law and order to the island while other political officials suggest that it isn't that much of a threat."
+hawaii.26.a:0 "War it is!"
+hawaii.26.b:0 "Peace Prevails"
+hawaii.27.t:0 "Friendly Greetings"
+hawaii.27.d:0 "While we were dealing with the syndicalists here in America, so to were the Hawaiians dealing with syndicalists. Thankfully just like in America, they have destroyed the syndicalist menace in Hawaii and have sent us friendly greetings and an offer to work with American business."
+hawaii.27.a:0 "Aloha Hawaii!"
+hawaii.28.t:0 ""
+hawaii.28.d:0 ""
+hawaii.28.a:0 ""
+hawaii.29.t:0 ""
+hawaii.29.d:0 ""
+hawaii.29.a:0 ""
+hawaii.30.t:0 ""
+hawaii.30.d:0 ""
+hawaii.30.a:0 ""
+hawaii.31.t:0 ""
+hawaii.31.d:0 ""
+hawaii.31.a:0 ""
+hawaii.32.t:0 ""
+hawaii.32.d:0 ""
+hawaii.32.a:0 ""
+hawaii.33.t:0 ""
+hawaii.33.d:0 ""
+hawaii.33.a:0 ""
+hawaii.34.t:0 ""
+hawaii.34.d:0 ""
+hawaii.34.a:0 ""
+
+
+
+
+
 hawaii.21.t:0 "The rise of Native Nationalism"
 hawaii.21.d:0 "With our nation having been free for some time now, the natives have organised a movement for the restoration of the Hawaiian monarchy. While this would normally be a source of great concern, considering the deposed family has married into the industrial families, a restoration would be benefical... The current pretender to the throne, Edward D. Kawananakoa, would be easy to control. A monarchy would expand our nation's cultural independence, and give the populace a figurehead..."
 hawaii.21.a:0 "Restore the monarchy!"
