--- a/localisation/KR_Political_events_l_english.yml
+++ b/localisation/KR_Political_events_l_english.yml
@@ -135,6 +135,7 @@ kr.political.23.d:0 "Our current government contains a Minister from a party of 
 kr.political.23.a:0 "There is nothing we can do."
 kr.political.23.b:0 "Use our influence to revert his efforts."
 
+### Starting Events ###
 kr.political.24.t:0 "Kaiserreich Beta 0.4 - Pax Americana!"
 kr.political.24.d:0 "The Kaiserreich Team proudly present Kaiserreich beta version 0.4 - Pax American for HOI4! For months now, our team has worked from every corner of the world to bring this mod to you. We hope you will enjoy playing it as much as we did making it.\n\nFirst off, there are several things we'd like to point out regarding our new mechanics: if you check the politics tab of your country, you'll see we added all kinds of exciting new things. Keep in mind that your stability level is directly influenced by your Political Power balance (Positive PP = GOOD, negative PP = BAD), so keep an eye on that! \n\nSecond, you should also be aware that the mod is designed with the assumption that the player will always annex all possible states in peace treaties, so you should make sure to do that!\n\nFinally, we'd like to remind you this is still beta, so expect bugs, crashes and various headaches. If (...when...) you encounter any of these, please report them on steam, our discord channel, or on our section of the PDX forums. \n\nEnjoy! \n                - The KR4 Team"
 kr.political.24.a:0 "Thank you Kaiserreich team!"
@@ -155,7 +156,7 @@ kr.political.33.d:0 "If you don't like Kaiserreich, why are you here?"
 kr.political.33.a:0 "That is a very good question!"
 
 kr.political.34.t:0 "Q&A"
-kr.political.34.d:0 "Should I play with historical focus on or off? \nWhile it shouldn't make any difference, we recommend you play with it on.\n\nQ2SOMETHING\nA2SOMETHING\n\nQ3SOMTHING\nA3SOMETHING"
+kr.political.34.d:0 "Should I play with historical focus on or off? \nWhile it shouldn't make any difference, we recommend you play with it on.\n\nHow come I can't puppet anything?\nAll puppetting is now done via events or foci rather than through peace conferences.\n\nQ3SOMTHING\nA3SOMETHING"
 kr.political.34.a:0 "Thanks for all the help!"
 
 kr.political.28.t:0 "News Events"
