GER: Fixes / UoB: Fixes

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -207,9 +207,9 @@ gerdom.2.t:0 "Hans von Seeckt dies"
 gerdom.2.d:0 "Our Chief of General Staff, Hans von Seeckt, has died today in Berlin. The hero of the Intervention in China passed away peacefully in his sleep. \n\nOur nation is mourning the loss of a true German hero, and all important dignitaries were in attendance at his funeral in Berlin. Afterwards, the Chief of the Army, August von Mackensen, could be seen whispering something to the Kaiser."
 gerdom.2.a:0 "I wonder what he is up to?"
 
-gerdom.4.t:0 "August von Mackensen retires"
-gerdom.4.d:0 "August von Mackensen has delivered his official retirement message to the Kaiser, wearing his trademark Life Hussar uniform. The Field Marshal is already eighty-six years old, and wishes merely to live out his days in peace. The Kaiser accepted the resignation, and ordered a celebration in his honour."
-gerdom.4.a:0 "This might be the time to reform our military."
+gerdom.4.t:0 "Problems with Grain Supply"
+gerdom.4.d:0 "With parts of our grain supply in the Baltic and the Ukraine no longer under our control, we have encountered severe problems. Let's hope this does not escalate as far as the horrible hunger winter of 1916/17..."
+gerdom.4.a:0 "Scheisse!"
 
 # Sale of Ceylon
 
@@ -957,6 +957,7 @@ GER_research_boost:0 "Research Funding"
 GER_victors_of_wwi:0 "Victors of the Weltkrieg"
 GER_tank_idea:0 "Investment in Panzers"
 GER_tirpitz_idea:0 "Tirpitzprogramm"
+GER_junkers_lost_idea:0 "Problems with Grain Supply"
 
 ### Tooltips
 GER_mackensen_retires:0 "You can now reform the military command"
