Hayreddin Pasha Faculty of Research

--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -180,6 +180,8 @@ OTT_education_reform:0 "Education Reforms"
 OTT_education_reform_desc:0 ""
 OTT_expand_universities:0 "Expand the Universities"
 OTT_expand_universities_desc:0 ""
+OTT_faculty_of_hayro_research:0 "Hayreddin Pasha Faculty of Research"
+OTT_faculty_of_hayro_research_desc:0 ""
 OTT_foreign_affairs:0 "Foreign Affairs"
 OTT_foreign_affairs_desc:0 ""
 OTT_ottoman_caliph:0 "The Ottoman Caliph"
