Names of parties for Ukraine and some changes in texts

--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -15,7 +15,7 @@ another_crisis_kulaks:0 "Another Crisis"
 ukranian_foreign_policy:0 "Ukrainian Foreign Policy Focus"
 investing_in_old_factories:0 "Investing in Old Factories"
 investing_in_new_factories:0 "Investing in New Factories"
-fn_oun_reforms:0 "'FN' and 'OUN' Reforms"
+fn_oun_reforms:0 "'ViN' and 'OUN' Reforms"
 UKR_language_immersion:0 "Language Immersion Project"
 constructing_donetsk_airport:0 "Constructing the Donetsk Airport"
 
@@ -23,27 +23,27 @@ constructing_donetsk_airport:0 "Constructing the Donetsk Airport"
 RUS_annex_UKR:0 "Ukrainian army incorporated"
 
 ### Political Parties ###
-UKR_totalist_party:0 "USP"
-UKR_totalist_party_long:0 "Ukrainian Syndicalist Party"
-UKR_radical_socialist_party:0 "USP"
-UKR_radical_socialist_party_long:0 "Ukrainian Syndicalist Party"
-UKR_syndicalist_party:0 "USP"
-UKR_syndicalist_party_long:0 "Ukrainian Syndicalist Party"
-UKR_social_democrat_party:0 "SDP"
-UKR_social_democrat_party_long:0 "Social Democratic Party"
-UKR_market_liberal_party:0 "SLP"
-UKR_market_liberal_party_long:0 "Social Liberal Party"
-UKR_social_conservative_party:0 "SCP"
-UKR_social_conservative_party_long:0 "Social conservative Party"
-UKR_authoritarian_democrat_party:0 "UDP"
-UKR_authoritarian_democrat_party_long:0 "Ukrainian democratic Party"
-UKR_paternal_autocrat_party:0 "OUN"
-UKR_paternal_autocrat_party_long:0 "Organisation of the Ukrainian nationalists"
-UKR_national_populist_party:0 "FN"
-UKR_national_populist_party_long:0 "Faith and Nation"
+UKR_totalist_party:0 "UKP"
+UKR_totalist_party_long:0 "Ukrainskaya Kommunisticheskaya Partiya"
+UKR_syndicalist_party:0 "SU"
+UKR_syndicalist_party_long:0 "Sindikalisty Ukrainy"
+UKR_radical_socialist_party:0 "Borotbists"
+UKR_radical_socialist_party_long:0 "Ukrainskaya Sotsial-Revolutsionnaya partiya"
+UKR_social_democrat_party:0 "UPSF"
+UKR_social_democrat_party_long:0 "Ukrainskaya Partiya Sotsialistov-Federalistov"
+UKR_market_liberal_party:0 "USP"
+UKR_market_liberal_party_long:0 "Ukrainskaya Selskaya Partiya"
+UKR_social_conservative_party:0 "ViN"
+UKR_social_conservative_party_long:0 "Vera i Narod"
+UKR_authoritarian_democrat_party:0 "UNS"
+UKR_authoritarian_democrat_party_long:0 "Ukrainskiy Natsionalnyi Soyuz"
+UKR_paternal_autocrat_party:0 "VSZ"
+UKR_paternal_autocrat_party_long:0 "Vseukrainskiy Soyuz Zemstv"
+UKR_national_populist_party:0 "OUN"
+UKR_national_populist_party_long:0 "Organizatsiya Ukrainskikh Nationalistov"
 
 ### Companies ###
-kommunara_nikolayev_shipyards:0 "Kommunara 61. Nikolayev Shipyards"
+kommunara_nikolayev_shipyards:0 "Nikolayev Shipyards"
 german_ukranian_agricultural_comission:0 "German-Ukranian Agricultural Comission"
 metallurgical_combine_azovstal:0 "Azovstal"
 ukr_akhz:0 "AKHZ"
@@ -137,7 +137,7 @@ ukraine.4.t:0 "Agricultural Crisis!"
 ukraine.4.d:0 "Ukraine has traditionally relied upon its grain trade with the German Empire to maintain its economic security. However, the current economic and social troubles have meant that the Germans are now more interested in protecting their own farmers than subsidising Ukrainian agriculture. This could be very dangerous for us - without money from German trade, our ruling class of agrarian landowners could find it difficult to maintain their position in the countryside."
 ukraine.4.a:0 "We're still the breadbasket of Europe. Right?"
 ukraine.5.t:0 "Faith and Nation"
-ukraine.5.d:0 "Before the agricultural crisis different pro-Russian movements were rather weak and didn't pose much of a threat to our government. But this crisis led to the growth of these organisations. Yesterday a famous Russian writer from Kiev Mikhail Bulgakov proclaimed the unification of the 3 biggest movements into 1, called 'Faith and Narod'. Supported by the Church, population of the Southern and Eastern Ukraine and many officers, this movement could provoke instability in some parts of our country."
+ukraine.5.d:0 "Before the agricultural crisis different pro-Russian movements were rather weak and didn't pose much of a threat to our government. But this crisis led to the growth of these organisations. Yesterday a famous Russian writer from Kiev Mikhail Bulgakov proclaimed the unification of the 3 biggest movements into 1, called 'Faith and Nation' ('Vera i Narod') or just 'ViN'. Supported by the Church, population of the Southern and Eastern Ukraine and many officers, this movement could provoke instability in some parts of our country."
 ukraine.5.a:0 "We really must protest!"
 ukraine.6.t:0 "Ivan Chernyakhovsky returns from Africa"
 ukraine.6.d:0 "Ivan Chernyakhovsky, a young and talented officer, returns to Ukraine. He was a member of the voluntary Ukrainian division, which helped our German allies in Mittelafrika. His books 'On the Banks of the Congo' and 'Safari' made him the most popular Ukrainian soldier and writer in the entire country. Chernyakhovsky was promoted to the rank of Colonel and will soon become the commander of the 1st Cossack disivion ('Serdyutskaya' division), which belongs to the elite of the Ukrainian army."
@@ -298,32 +298,32 @@ ukraine.47.d:0 "Pavel Skoropadsky has decided to hold free elections in Ukraine,
 ukraine.47.a:0 "Strike a bargain with the rightist parties against Khrushchev"
 ukraine.47.b:0 "The elections must go ahead without interference!"
 ukraine.48.t:0 "The Coalition Wins!"
-ukraine.48.d:0 "'Ukrainian democratic Party', 'Faith and Nation' (FN) and 'Organisation of the Ukrainian Nationalists' (OUN) got a majority in the new Ukrainian Parliament. It means, that Syndicalism is no more a treat for us, but now we have take into account the absolutely different interests of the Russians and Ukrainian Nationalists. According to our previous agreement, 'FN' will get Ministry of Economics and 'OUN' Foreign Ministry."
+ukraine.48.d:0 "'Ukrainian peasant party' (USP), 'Faith and Nation' (ViN) and 'Organisation of the Ukrainian Nationalists' (OUN) got a majority in the new Ukrainian Parliament. It means, that Syndicalism is no more a treat for us, but now we have take into account the absolutely different interests of the Russians and Ukrainian Nationalists. According to our previous agreement, 'ViN' will get Ministry of Economics and 'OUN' Foreign Ministry."
 ukraine.48.a:0 "An agreement is an agreement"
 ukraine.49.t:0 "Syndicalists Win!"
 ukraine.49.d:0 "'Ukrainian Syndicalist Party' led by Nikita Khrushchev predictably won these elections. It means, that Pavel Skoropadsky doesn't play an important role in the Ukrainian politics any more. Khrushchev is ready to show his programme to our King."
 ukraine.49.a:0 "Goodbye Skoropadsky"
-ukraine.50.t:0 "'FN' and 'OUN' Commence Reforms"
+ukraine.50.t:0 "'ViN' and 'OUN' Commence Reforms"
 ukraine.50.d:0 "Members of 'Faith and Nation' and 'Organisation of the Ukrainian nationalists' have begun to replace old officials of the Hetman`s period in the regions. Surprisingly, it has had a positive effect on our economy, because new local governments are ready to solve problems of their towns and villages."
 ukraine.50.a:0 "Hmmm, I thought we would have more problems"
 ukraine.51.t:0 "An Heir to King Vasily?"
-ukraine.51.d:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. 'FN' and 'OUN' support Daniil as they believe he will weaken Ukrainian dependence on Mitteleuropa. Leo has support only from Skoropadsky`s opponents and employers, who have connections with Germany and Austria. Whom will we choose?"
+ukraine.51.d:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. 'ViN' and 'OUN' support Daniil as they believe he will weaken Ukrainian dependence on Mitteleuropa. Leo has support only from Skoropadsky`s opponents and employers, who have connections with Germany and Austria. Whom will we choose?"
 ukraine.51.a:0 "Leo Stefan Habsburg!"
 ukraine.51.b:0 "Daniil Skoropadsky!"
 ukraine.52.t:0 "An Heir to King Vasily?"
-ukraine.52.d:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. 'FN' and 'OUN' support Daniil as they believe he will weaken Ukrainian dependence on Mitteleuropa. Leo has support only from Skoropadsky`s opponents and employers, who have connections with Germany and Austria. Whom will we choose?"
+ukraine.52.d:0 "Unfortunately, our King has no children and as such he has to choose his successor. Only two candidatures are considered by the government and ministers - the nephew of Vasily, Leo Stefan Habsburg and Daniil Skoropadsky, son of our Hetman. 'ViN' and 'OUN' support Daniil as they believe he will weaken Ukrainian dependence on Mitteleuropa. Leo has support only from Skoropadsky`s opponents and employers, who have connections with Germany and Austria. Whom will we choose?"
 ukraine.52.a:0 "Leo Stefan Habsburg!"
 ukraine.52.b:0 "Daniil Skoropadsky!"
 ukraine.53.t:0 "A New Minister of Security?"
-ukraine.53.d:0 "Igor Kistyakovsky, who has been our minister of Security since 1918, had to retire from his post because of his poor health. 'Faith and Nation' and 'Organisation of the Ukrainian nationalists' started immediately to fight for this top position in the government because each party hopes to control Ukrainian internal policy. We have to give 'FN' or 'OUN' this post, according to our agreement, which were concluded before the elections."
-ukraine.53.a:0 "Vladimir Khitrovo from 'FN'"
+ukraine.53.d:0 "Igor Kistyakovsky, who has been our minister of Security since 1918, had to retire from his post because of his poor health. 'Faith and Nation' and 'Organisation of the Ukrainian nationalists' started immediately to fight for this top position in the government because each party hopes to control Ukrainian internal policy. We have to give 'ViN' or 'OUN' this post, according to our agreement, which were concluded before the elections."
+ukraine.53.a:0 "Vladimir Khitrovo from 'ViN'"
 ukraine.53.b:0 "Vladimir Chekhovsky from 'OUN'"
 ukraine.53.c:0 "Daniil Skoropadsky, son of our Hetman"
 ukraine.54.t:0 "Explosion on the Dnieper"
 ukraine.54.d:0 "Today at 11 a.m. when our King Vasily was on his yacht, an explosion rips apart his small ship. Our minister of security got a message that the yacht of His Majesty was mined by a syndicalist group, which had decided to keep up their struggle against our government after their loss at the elections. Unfortunately, there was no chance to save our King, and different political groups want to use this chance and begin to govern Ukraine."
-ukraine.54.a:0 "Long live Leo Stefan! And his supporters fron 'FN'..."
+ukraine.54.a:0 "Long live Leo Stefan! And his supporters fron 'ViN'..."
 ukraine.54.b:0 "Long live Leo Stefan! And his supporters fron 'OUN'..."
-ukraine.54.c:0 "Long live Daniil! And his supporters fron 'FN'..."
+ukraine.54.c:0 "Long live Daniil! And his supporters fron 'ViN'..."
 ukraine.54.e:0 "Long live Daniil! And his supporters fron 'OUN'..."
 ukraine.54.f:0 "Long live Daniil! And his father Pavel..."
 ukraine.55.t:0 "Recognising Russian as the Official Second Language"
