--- a/localisation/KR_Ukraine_l_english.yml
+++ b/localisation/KR_Ukraine_l_english.yml
@@ -321,10 +321,10 @@ ukraine.53.b:0 "Vladimir Chekhovsky from 'OUN'"
 ukraine.53.c:0 "Daniil Skoropadsky, son of our Hetman"
 ukraine.54.t:0 "Explosion on the Dnieper"
 ukraine.54.d:0 "Today at 11 a.m. when our King Vasily was on his yacht, an explosion rips apart his small ship. Our minister of security got a message that the yacht of His Majesty was mined by a syndicalist group, which had decided to keep up their struggle against our government after their loss at the elections. Unfortunately, there was no chance to save our King, and different political groups want to use this chance and begin to govern Ukraine."
-ukraine.54.a:0 "Long live Leo Stefan! And his supporters fron 'ViN'..."
-ukraine.54.b:0 "Long live Leo Stefan! And his supporters fron 'OUN'..."
-ukraine.54.c:0 "Long live Daniil! And his supporters fron 'ViN'..."
-ukraine.54.e:0 "Long live Daniil! And his supporters fron 'OUN'..."
+ukraine.54.a:0 "Long live Leo Stefan! And his supporters from 'ViN'..."
+ukraine.54.b:0 "Long live Leo Stefan! And his supporters from 'OUN'..."
+ukraine.54.c:0 "Long live Daniil! And his supporters from 'ViN'..."
+ukraine.54.e:0 "Long live Daniil! And his supporters from 'OUN'..."
 ukraine.54.f:0 "Long live Daniil! And his father Pavel..."
 ukraine.55.t:0 "Recognising Russian as the Official Second Language"
 ukraine.55.d:0 "One of the biggest problems, which exists in Ukraine is the language question. De-facto the Russian language is used by majority of the population, but its usage is prohibited in the state institutions. 'Faith and Nation' movement has always opposed this prohibition and thus it is with great pleasure that prime-minister Mikhail Bulgakow now finally is able to abolish this language law."
