More work on the CSA.

--- a/localisation/KR_Combined_Syndicates_of_America_l_english.yml
+++ b/localisation/KR_Combined_Syndicates_of_America_l_english.yml
@@ -55,7 +55,6 @@ CSA_liberty_ship:0 "Liberty Ships"
 CSA_syndicalism_arsenal:0 "Arsenal of Syndicalism"
 CSA_longist_remnants:0 "Longist Remnants"
 CSA_mexican_american_treaty:0 "Mexican-American Friendship Treaty"
-
 ### Parties ###
 CSA_totalist_party:0 "CSA"
 CSA_totalist_party_long:0 "Combined Syndicates of America's Totalist Strand"
@@ -572,6 +571,18 @@ combinedsyndicates.105.a:0 "Paul Mattick's hardnosed approach wins favours"
 combinedsyndicates.105.b:0 "William Z. Foster's genius secures him the job"
 combinedsyndicates.105.c:0 "James W. Ford's longstanding friendship serves him well"
 combinedsyndicates.105.e:0 "Eugene Dennis's union links sweep him to power"
+combinedsyndicates.106.t:0 "Worker's Confederation"
+combinedsyndicates.106.d:0 "The United States has been remade into a decentralized democratic Confederation of Socialistic States. Power is shared largely between the states themselves with the federal government has been weakened. Though, the Federal government is not totally weak to be irrelevant, it has power to help keep the revolution going as well as dealing with foreign governments. The office of the President and Vice President have been replaced by popularly elected General Secretary and Deputy Secretary positions. Congress has been remade into a unicameral legislature. The ideals of Democratic Confederalism have been implemented throughout the government. The new government is truly for the people, by the people, and of the people."
+combinedsyndicates.106.a:0 "Solidarity Forever!"
+combinedsyndicates.107.t:0 "Worker's Federation"
+combinedsyndicates.107.d:0 "The United States has been reforged into a federal republic. The office of President and vice president have been replaced by a General Secretary and deputy secretary that are elected by the people as a whole and not an electoral college. Power is shared between the local States and the Federal government. The Senate has been abolished while the House of Representatives has been strengthened making Congress a unicameral legislature. The ideals of Democratic Socialism are implemented in all aspects of government from the top to the bottom. The new government is truly for the people, by the people, and of the people."
+combinedsyndicates.107.a:0 "Solidarity Forever!"
+combinedsyndicates.108.t:0 "United Socialistic States of America"
+combinedsyndicates.108.d:0 "The United States has been reforged into a centralized republic. The office of president and vice president have been replaced by the offices of General Secretary and Deputy Secretary that are chosen from among the Socialist Party itself. The central government has been strengthened and most of the powers and responsibilities of the state it has taken up. The concept of Democratic Centralism has been established and implemented throughout the government. America has taken a new step into the future and united we shall not fail."
+combinedsyndicates.108.a:0 "Solidarity Forever!"
+
+
+
 combinedsyndicates.43.t:0 "The New England General Strike"
 combinedsyndicates.43.d:0 "A general strike has been called throughout New England and many workers in the cities throughout New England from Boston to Bangor to Buffalo have gone on strike for better working conditions. Leaders throughout New England are discussing how to resolve the matter. Some suggest doing nothing claiming the workers will tire themselves out rather quickly. Others are claiming that this is a plot by the CSA to take control of New England and suggest we crackdown hard on them. Finally others are suggesting that we implement reforms in the workplace to help buy off the striking workers."
 combinedsyndicates.43.a:0 "Do Nothing the Strike will end soon enough"
