--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -15,8 +15,8 @@ POL_black_monday1:0 "Effects of Black Monday"
 POL_black_monday1_desc:0 "Germany's Black Monday has also affected our country. We have to act."
 POL_eternal_regency:0 "Eternal Regency"
 POL_eternal_regency_desc:0 "Poland's Regency council, initially created to decide upon the new King of Poland, has been bloated and ineffective for almost two decades. The strain this has on the small Polish nation is reaching a breaking point."
-POL_german_advisors:0 "German Advisers"
-POL_german_advisors_desc:0 "Reforming our military and political structure is of the utmost importance if we are to remain politically relevant in Europe. By taking advantage of our close ties with Germany, we can allow them to send us advisers to modernise our armed forces."
+POL_german_advisors:0 "German Advisors"
+POL_german_advisors_desc:0 "Reforming our military and political structure is of the utmost importance if we are to remain politically relevant in Europe. By taking advantage of our close ties with Germany, we can allow them to send us advisros to modernize our armed forces."
 POL_mathematics_schools:0 "Mathematics Schools"
 POL_mathematics_schools_desc:0 "to-do"
 POL_winged_hussars_idea:0 "Spirit of the Winged Hussars"
@@ -33,7 +33,7 @@ POL_euro_block_idea:0 "The European Economic Bloc"
 POL_euro_block_idea_desc:0 "to-do"
 POL_an_absolute_monarch_idea:0 "An Absolute Monarch"
 POL_an_absolute_monarch_idea_desc:0 "to-do"
-POL_centralized_state_idea:0 "A Centralised State"
+POL_centralized_state_idea:0 "A Centralized State"
 POL_centralized_state_idea_desc:0 "to-do"
 POL_a_new_sejm_idea:0 "A New Sejm"
 POL_a_new_sejm_idea_desc:0 "to-do"
@@ -42,7 +42,8 @@ POL_trade_reform_idea_desc:0 "to-do"
 
 ### Foci ###
 POL_the_great_debate:0 "The Great Debate"
-polands_future:0 "With the Regency Council's two decades of intense debate at a close, Poland can move on to a new, brighter future."
+polands_future:0 "The Regency Council will attempt to elect a new King of Poland, as they have done for the past 20 years."
+pol_succession:0 "In the event of the King's untimely demise, the succession will be secured."
 pol_abolished_the_sejm:0 "You will abolish the Sejm, preventing them from holding any future elections."
 POL_a_new_poland:0 "A New Poland"
 POL_von_habsburg:0 "A von Habsburg!"
@@ -54,22 +55,22 @@ POL_join_international_community:0 "Join the International Community"
 POL_a_firm_hand:0 "A Firm Hand"
 POL_victory_of_the_people:0 "A Victory of the People"
 POL_join_federation:0 "Join the Austrian Federation"
-POL_return_galicia:0 "Return Galicia"
+POL_return_galicia:0 "Return of Galicia"
 POL_lessons_of_the_empire:0 "Lessons of the Empire"
 POL_austrian_tech_sharing:0 "Austrian Technology Sharing"
 POL_absolutism:0 "An Absolute Monarch"
 POL_reform_the_monarchy:0 "Reform the Monarchy"
 POL_abolish_the_council:0 "Abolish the Sejm"
 POL_citizens_rights:0 "Citizen's Rights"
-POL_a_centralized_state:0 "A Centralised State"
+POL_a_centralized_state:0 "A Centralized State"
 POL_a_new_sejm:0 "The New Sejm"
 POL_poland_lithuania:0 "Polish-Lithuanian Commonwealth"
 POL_minority_rights:0 "Minority Rights"
 POL_a_new_constitution:0 "A New Constitution"
 POL_lithuanian_shipbuilding:0 "Lithuanian Shipbuilding"
-POL_new_trade_opportunities:0 "Foreign Trade Opportunities"
+POL_new_trade_opportunities:0 "New Naval Officers"
 POL_join_mitteleuropa:0 "Join Mitteleuropa"
-POL_german_advisors:0 "Invite German Advisers"
+POL_german_advisors:0 "Invite German Advisors"
 POL_join_economic_bloc:0 "The European Economic Bloc"
 POL_german_tech_sharing:0 "German Technology Sharing"
 POL_the_entente:0 "The Entente"
@@ -79,9 +80,9 @@ POL_unrestircted_submarine_warfare:0 "Unrestricted Submarine Warfare"
 POL_a_new_navy:0 "The New Polish Navy"
 POL_pride_of_the_baltic:0 "Pride of the Baltic"
 POL_polish_marines:0 "Foreign Polish Expeditions"
-POL_naval_industry:0 "Rebuild Naval Industry"
+POL_naval_industry:0 "Naval Buildup in Gdansk"
 POL_gdansk_agreement:0 "The Danzig Agreement"
-POL_sieze_gdansk:0 "Seize Gdansk"
+POL_sieze_gdansk:0 "Sieze Gdansk"
 POL_poland_forever:0 "Poland Forever"
 POL_beacon_of_polish_spirit:0 "Beacon of Polish Spirit"
 POL_not_yet_lost:0 "Not Yet Lost"
@@ -111,12 +112,12 @@ POL_luxembourg_world_revolution:0 "Roza Luksemburg's World Revolution"
 POL_attend_internationale:0 "Attend the Internationale"
 POL_join_france:0 "A Pact with France"
 POL_territorial_claims:0 "German Territorial Claims"
-POL_kickstart_navy:0 "Kick-start the New Navy"
+POL_kickstart_navy:0 "Kickstart the New Navy"
 POL_austrian_claims:0 "Austrian Territorial Claims"
 POL_minstry_of_public_security:0 "The Ministry of Public Security"
 POL_international_agents:0 "International Polish Agents"
 POL_spread_the_revolution:0 "Spreading the Revolution"
-POL_redistribute_wealth:0 "Redistribute the Wealth"
+POL_redistribute_wealth:0 "Redistirbute the Wealth"
 POL_centralize_infrastructure:0 "The New Central Industrial Region"
 POL_farmers_reform:0 "The State Road Fund"
 POL_reform_banks:0 "Restructure the Bank of Poland"
@@ -128,14 +129,14 @@ POL_more_munitions:0 "Stalowa Wola"
 POL_modernization_munitions:0 "Contemporary Assembly Lines"
 POL_research_slot:0 "Private Research Initiatives"
 POL_more_factories:0 "Industrial Expansion"
-POL_factories:0 "Modernise Congress Poland"
+POL_factories:0 "Modernize Congress Poland"
 POL_border_forts:0 "Establish Border Forts"
 POL_defensive_tactics:0 "Defensive Tactics"
 POL_army_reform:0 "The Next War's Army"
 POL_new_airforce:0 "A New Air Force"
-POL_import_rifles:0 "Import Foreign Rifles"
+POL_import_rifles:0 "Import Foregin Rifles"
 POL_a_new_rifle:0 "The New Polish Rifle"
-POL_military_ideals:0 "An Offensive Fighting Force"
+POL_military_ideals:0 "An Offesnive Fighting Force"
 POL_modern_military_thought:0 "Modern Military Thought"
 POL_military_desgin_bureaus:0 "Polish Military Design Bureau"
 POL_modern_cavalry:0 "New Age Cavalry"
@@ -145,7 +146,7 @@ POL_air_superiority:0 "Combat Air Superiority"
 POL_close_combat:0 "From Biplane to Fighter"
 POL_air_radios:0 "Personal Pilot Radios"
 POL_air_tactics:0 "Revised Air Combat Tactics"
-POL_support_focus:0 "Destroy Their Foot-soldiers"
+POL_support_focus:0 "Destroy Their Footsoldiers"
 POL_bomber_focus:0 "Destroy Their Homes"
 POL_the_great_debate_desc:0 "The Great Debate"
 POL_a_new_poland_desc:0 "A New Poland"
@@ -154,23 +155,23 @@ POL_von_hohenzollern_desc:0 "A Von Hohenzollern!"
 POL_a_firm_hand_desc:0 "A Firm Hand"
 POL_victory_of_the_people_desc:0 "A Victory of the People"
 POL_join_federation_desc:0 "Join the Austrian Federation"
-POL_return_galicia_desc:0 "Return Galicia"
+POL_return_galicia_desc:0 "Return of Galicia"
 POL_lessons_of_the_empire_desc:0 "Lessons of the Empire"
 POL_austrian_tech_sharing_desc:0 "Austrian Technology Sharing"
 POL_absolutism_desc:0 "An Absolute Monarch"
 POL_reform_the_monarchy_desc:0 "Reform the Monarchy"
 POL_abolish_the_council_desc:0 "Abolish the Sejm"
 POL_citizens_rights_desc:0 "Citizen's Rights"
-POL_a_centralized_state_desc:0 "A Centralised State"
+POL_a_centralized_state_desc:0 "A Centralized State"
 POL_a_new_sejm_desc:0 "The New Sejm"
 POL_poland_lithuania_desc:0 "Polish-Lithuanian Commonwealth"
 POL_minority_rights_desc:0 "Minority Rights"
 POL_a_new_constitution_desc:0 "A New Constitution"
 POL_lithuanian_shipbuilding_desc:0 "Lithuanian Shipbuilding"
-POL_kickstart_navy_desc:0 "Kick-start the New Navy"
-POL_new_trade_opportunities_desc:0 "Foreign Trade Opportunities"
+POL_kickstart_navy_desc:0 "Kickstart the New Navy"
+POL_new_trade_opportunities_desc:0 "New Naval Officers"
 POL_join_mitteleuropa_desc:0 "Join Mitteleuropa"
-POL_german_advisors_desc:0 "Invite German Advisers"
+POL_german_advisors_desc:0 "Invite German Advisors"
 POL_join_economic_bloc_desc:0 "The European Economic Bloc"
 POL_german_tech_sharing_desc:0 "German Technology Sharing"
 POL_the_entente_desc:0 "The Entente"
@@ -180,9 +181,9 @@ POL_unrestircted_submarine_warfare_desc:0 "Unrestricted Submarine Warfare"
 POL_a_new_navy_desc:0 "The New Polish Navy"
 POL_pride_of_the_baltic_desc:0 "Pride of the Baltic"
 POL_polish_marines_desc:0 "Foreign Polish Expeditions"
-POL_naval_industry_desc:0 "Rebuild Naval Industry"
+POL_naval_industry_desc:0 "Naval Buildup in Gdansk"
 POL_gdansk_agreement_desc:0 "The Danzig Agreement"
-POL_sieze_gdansk_desc:0 "Seize Gdansk"
+POL_sieze_gdansk_desc:0 "Sieze Gdansk"
 POL_poland_forever_desc:0 "Poland Forever"
 POL_beacon_of_polish_spirit_desc:0 "Beacon of Polish Spirit"
 POL_not_yet_lost_desc:0 "Not Yet Lost"
@@ -216,9 +217,9 @@ POL_austrian_claims_desc:0 "Austrian Territorial Claims"
 POL_minstry_of_public_security_desc:0 "The Ministry of Public Security"
 POL_international_agents_desc:0 "International Polish Agents"
 POL_spread_the_revolution_desc:0 "Spreading the Revolution"
-POL_redistribute_wealth_desc:0 "Redistribute the Wealth"
-POL_centralize_infrastructure_desc:0 "Centralise Polish Infrastructure"
-POL_farmers_reform_desc:0 "Modernise Polish Farming"
+POL_redistribute_wealth_desc:0 "Redistirbute the Wealth"
+POL_centralize_infrastructure_desc:0 "Centralize Polish Infrastructure"
+POL_farmers_reform_desc:0 "Modernize Polish Farming"
 POL_reform_banks_desc:0 "Restructure the Bank of Poland"
 POL_currency_reevaluation_desc:0 "Reintroduce the Złoty"
 POL_the_new_polish_worker_desc:0 "The New Polish Worker"
@@ -245,12 +246,21 @@ POL_air_superiority_desc:0 "Combat Air Superiority"
 POL_close_combat_desc:0 "From Biplane to Fighter"
 POL_air_radios_desc:0 "Personal Pilot Radios"
 POL_air_tactics_desc:0 "Revised Air Combat Tactics"
-POL_support_focus_desc:0 "Destroy Their Foot-soldiers"
+POL_support_focus_desc:0 "Destroy Their Footsoldiers"
 POL_bomber_focus_desc:0 "Destroy Their Homes"
 POL_polish_king_desc:0 "A True Polish King!"
 POL_reincorporate_lithuania_desc:0 "Reincorporate Lithuania"
 POL_line_of_succession_desc:0 "A Clear Line of Succession"
 POL_join_international_community_desc:0 "Join the International Community"
+
+POL_mendog_iii:0 "A Lithuanian King!"
+POL_mendog_iii_desc:0 "A Lithuanian King!"
+POL_vilinus_accord:0 "The Vilnius Accord"
+POL_vilinus_accord_desc:0 "The Vilnius Accord"
+POL_renewed_nationalism:0 "Renewed Nationalism"
+POL_renewed_nationalism_desc:0 "Renewed Nationalism"
+POL_the_peoples_king:0 "The People's King"
+POL_the_peoples_king_desc:0 "The People's King"
 
 ### Companies ###
 cop:0 "COP"
@@ -274,9 +284,9 @@ POL_WE_AUS:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_WE_GER:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_CZA_AUS:0 "Elected J.K.W. Eustachy I Sapieha"
 POL_CZA_GER:0 "Elected J.K.W. Eustachy I Sapieha"
-POL_SHUNNED_US:0 "The poles have shunned us"
+POL_SHUNNED_US:0 "The poles have shuned us"
 POL_DEFIED_US:0 "The poles defied us"
-POL_SHUNNED_US_BIG:0 "The poles have shunned us"
+POL_SHUNNED_US_BIG:0 "The poles have shuned us"
 POL_LIT_SEP:0 "No Polish-Lithuanian Commonwealth"
 POL_JOIN_MITT:0 "Poland joins Mitteleuropa"
 POL_NO_JOIN_MITT:0 "Poland don't join Mitteleuropa"
@@ -818,12 +828,12 @@ poland.124.t:0 "The Great Debate Continues"
 poland.124.d:0 "Initially established at the end of the Weltkrieg in order to ascertain the next King of Poland, the Regency Council has been in charge of Poland's political structure for almost two decades. Constant distractions, debates, and general inefficiencies have prevented the Council from doing anything of note for far too long, and have led Poland down a path of constant instability. Even now, debates continue in the Council over meaningless topics, and observers have little hope that any meaningful decision will be made in the next few years."
 poland.124.a:0 "Unfortunate"
 poland.125.t:0 "The Council is Distracted"
-poland.125.d:0 "The most recent debate to enthral the members of the Regency Council has to do with whether or not the future King of Poland needs be at least as tall as the last King of Poland, so as to be more imposing in stature. True progress seems as far off as ever."
+poland.125.d:0 "The most recent debate to enthrall the members of the Regency Council has to do with whether or not the future King of Poland needst be at least as tall as the last King of Poland, so as to be more imposing in stature. True progress seems as far off as ever."
 poland.125.a:0 "Height is meaningless!"
 poland.125.b:0 "Height is everything!"
 poland.126.t:0 "Desk Dilemmas"
 poland.126.d:0 "As tension mounts in the halls of Europe, the Regency Council has been hotly debating whether or not they should increase the size of the desks in the Council chambers. Many are for it, while many are against, and factions have divided members of the Council around their percieved votes. The debates have been printed on the front page of Polish newspapers, sparking outrage among citizens."
-poland.126.a:0 "A larger work-space is critical!"
+poland.126.a:0 "A larger workspace is critical!"
 poland.126.b:0 "Who cares?"
 poland.127.t:0 "The Council Regains Focus"
 poland.127.d:0 "Eventually, even the Regency Council feels the the pressure from the rising tension infiltrating Europe. After settling many petty disputes still being debated, the Regency Council seems finally poised to crown a new King of Poland in the coming weeks."
