Localisation updates for Poland.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -39,6 +39,16 @@ POL_a_new_sejm_idea:0 "A New Sejm"
 POL_a_new_sejm_idea_desc:0 "to-do"
 POL_trade_reform_idea:0 "International Trade Reform"
 POL_trade_reform_idea_desc:0 "to-do"
+POL_poland_forever_idea:0 "Poland Forever"
+POL_poland_forever_idea_desc:0 "to-do"
+POL_spread_revolution_idea:0 "Spreading the Revolution"
+POL_spread_revolution_idea_desc:0 "to-do"
+POL_public_security_idea:0 "The Ministry of Public Security"
+POL_public_security_idea_desc:0 "to-do"
+POL_exceptionalism_idea:0 "Polish Exceptionalism"
+POL_exceptionalism_idea_desc:0 "to-do"
+POL_redistribute_wealth_idea:0 "Redistributed Wealth"
+POL_redistribute_wealth_idea_desc:0 "to-do"
 
 ### Foci ###
 POL_the_great_debate:0 "The Great Debate"
@@ -838,6 +848,135 @@ poland.126.b:0 "Who cares?"
 poland.127.t:0 "The Council Regains Focus"
 poland.127.d:0 "Eventually, even the Regency Council feels the the pressure from the rising tension infiltrating Europe. After settling many petty disputes still being debated, the Regency Council seems finally poised to crown a new King of Poland in the coming weeks."
 poland.127.a:0 "Finally!"
+poland.128.t:0 "Joining the Austrian Federation"
+poland.128.d:0 "to-do"
+poland.128.a:0 "Joining the Federation will secure our future."
+poland.129.t:0 "Poland Applies for Federal Status"
+poland.129.d:0 "to-do"
+poland.129.a:0 "We are stronger together."
+poland.129.b:0 "We don't need those weaklings!"
+poland.130.t:0 "The Return of Galicia"
+poland.130.d:0 "to-do"
+poland.130.a:0 "Galicia deserves our benevolent rulership!"
+poland.131.t:0 "Poland Requests Dominion over Galicia"
+poland.131.d:0 "to-do"
+poland.131.a:0 "Utterly Ridiculous!"
+poland.131.b:0 "It is theirs by right."
+poland.131.c:0 "They shall make do with only Krakow."
+poland.132.t:0 "The Vilnius Accord"
+poland.132.d:0 "to-do"
+poland.132.a:0 "We are safer together."
+poland.133.t:0 "Poland Requests an Alliance"
+poland.133.d:0 "to-do"
+poland.133.a:0 "Of course!"
+poland.133.b:0 "We don't need them!"
+poland.134.t:0 "Reincorporating Lithuania"
+poland.134.d:0 "to-do"
+poland.134.a:0 "They are safer under our protection."
+poland.135.t:0 "Poland Seeks Our Submittance"
+poland.135.d:0 "to-do"
+poland.135.a:0 "Unfortunately, we need them."
+poland.135.b:0 "Never!"
+poland.136.t:0 "Austria Denies our Request"
+poland.136.d:0 "to-do"
+poland.136.a:0 "Outrageous!"
+poland.137.t:0 "Austria Acquiesces"
+poland.137.d:0 "to-do"
+poland.137.a:0 "Fantastic!"
+poland.138.t:0 "The Return of Krakow"
+poland.138.d:0 "to-do"
+poland.138.a:0 "Our people, reunited."
+poland.139.t:0 "The Accords Succeed"
+poland.139.d:0 "to-do"
+poland.139.a:0 "Just like old times!"
+poland.140.t:0 "Lithuania Stands Alone"
+poland.140.d:0 "to-do"
+poland.140.a:0 "Then they shall die alone."
+poland.141.t:0 "Lithuania Submits!"
+poland.141.d:0 "to-do"
+poland.141.a:0 "We shall care for them well."
+poland.142.t:0 "Lithuania Defiant"
+poland.142.d:0 "to-do"
+poland.142.a:0 "How could they?!"
+poland.143.t:0 "Poland Seeks Danzig"
+poland.143.d:0 "to-do"
+poland.143.a:0 "It is a fair trade."
+poland.143.b:0 "Us? Surrendering territory? Unthinkable!"
+poland.144.t:0 "The Kaiser Agrees"
+poland.144.d:0 "to-do"
+poland.144.a:0 "R-really?"
+poland.145.t:0 "An Unnacceptable Trade"
+poland.145.d:0 "to-do"
+poland.145.a:0 "To be expected..."
+poland.146.t:0 "Poland Seeks Protection"
+poland.146.d:0 "to-do"
+poland.146.a:0 "All allies are welcome."
+poland.146.a:0 "They can't possibly help us."
+poland.147.t:0 "Poland Joins the Entente"
+poland.147.d:0 "to-do"
+poland.147.a:0 "Wonderful!"
+poland.148.t:0 "Poland Remains Alone"
+poland.148.d:0 "to-do"
+poland.148.a:0 "Understandable"
+poland.149.t:0 "Poland Seeks Russian Aid"
+poland.149.d:0 "to-do"
+poland.149.a:0 "Yesterday's enemy is today's friend."
+poland.149.b:0 "This is surely a trap."
+poland.150.t:0 "Russia Accepts"
+poland.150.d:0 "to-do"
+poland.150.a:0 "Unlikely bedfellows."
+poland.151.t:0 "Russia Ignores Polish Pleas"
+poland.151.d:0 "to-do"
+poland.151.a:0 "Our past differences were too great."
+poland.152.t:0 "A New Alliance in Europe"
+poland.152.d:0 "to-do"
+poland.152.a:0 "Better together than alone."
+poland.152.b:0 "A foolish endeavor."
+poland.153.t:0 "Romania is with us!"
+poland.153.d:0 "to-do"
+poland.153.a:0 "A wise choice."
+poland.154.t:0 "Romania Refuses"
+poland.154.d:0 "to-do"
+poland.154.a:0 "I see."
+poland.155.t:0 "A Polish Alliance"
+poland.155.d:0 "to-do"
+poland.155.a:0 "We accept!"
+poland.155.b:0 "We politely decline."
+poland.156.t:0 "Hungary Signs the Pact!"
+poland.156.d:0 "to-do"
+poland.156.a:0 "Together we are invincible!"
+poland.157.t:0 "The Hungarians Decline"
+poland.157.d:0 "to-do"
+poland.157.a:0 "Our pasts have held us back."
+poland.158.t:0 "A Black Sea Alliance"
+poland.158.d:0 "to-do"
+poland.158.a:0 "We must accept."
+poland.158.b:0 "They are too distant to be of help."
+poland.159.t:0 "Georgia Signs!"
+poland.159.d:0 "to-do"
+poland.159.a:0 "Glorious!"
+poland.160.t:0 "Georgia Remains Silent"
+poland.160.d:0 "to-do"
+poland.160.a:0 "We could have used their strength..."
+poland.161.t:0 "Poland Joins the Internationale?"
+poland.161.d:0 "to-do"
+poland.161.a:0 "Our brothers!"
+poland.161.b:0 "Their belief in our cause is flimsy."
+poland.162.t:0 "The Internationale Grows!"
+poland.162.d:0 "to-do"
+poland.162.a:0 "The wheels of revolution turn!"
+poland.163.t:0 "The Commune Dismisses Polish Interest"
+poland.163.d:0 "to-do"
+poland.163.a:0 "Impossible!"
+poland.164.t:0 "Emergency Elections"
+poland.164.d:0 "to-do"
+poland.164.a:0 "The Patriotic Party"
+poland.164.b:0 "The People's Coalition"
+poland.164.c:0 "National-Radical Party"
+poland.164.e:0 "The Syndicalist Party"
+poland.165.t:0 "The Situation of Poland in 1936"
+poland.165.d:0 "Until the end of the Weltkrieg, there was no Poland. What had been Polish territory had been carved up between Austria, Russia and Prussia at the end of the 18th century, and in the face of scattered uprisings throughout the 19th those three nations continued to hold on to their Polish territory. Polish fortunes turned in 1916, though, with the Act of November 5th, where it was granted authonomy from the collapsing Russia. However, this triumph came with a bitter taste, as the election of a polish king was postponed again and again between 1921 and 1936 as Austria-Hungary and Germany squabbled about the nationality of a possible king and the exact status of a polish kingdom. Hence, the regency of Janusz Radziwill continues. However, all hope of a polish kingdom is not over: the Ausgleich of 1937 is eagerly looked forward to in Warsaw as the time when the future of Poland is decided. However, certain forces in Warsaw are tired of beeing under the austro-german yoke, and looks towards their 'enslaved' brothers in Germany, Austria and the eastern states, hoping to one day create a kingdom for all Poles."
+poland.165.a:0 "Jeszcze Polska nie zginęła!"
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
@@ -850,3 +989,6 @@ POL_MEN:0 "Mendog III is King"
 POL_CZA:0 "Augustyn I Czartoryski is King"
 POL_SEJM_ABOLISHED:0 "Abolished the Sejm"
 POL_central_forts:0 "gains moderate defensive infrastructure."
+POL_RAD:0 "Karol Radek leads Poland"
+POL_ROZA:0 "Roza Luksemburg leads Poland"
+POL_JAKUB:0 "Jakub Hanecki leads Poland"
