GER: Ceylon GFX

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -140,10 +140,12 @@ GER_kaiser_wilhelm_society:0 "The Kaiser Wilhelm Society"
 GER_kaiser_wilhelm_society_desc:0 "Recent investments in the Kaiser Wilhelm Society for the Advancement of Science have resulted in greater research capacity in various fields"
 GER_black_monday_radio:0 "The Kanzler and the Radio"
 GER_black_monday_radio_desc:0 "The crisis has shaken the Germans' belief in their country. Reichskanzler von Papen hopes to turn the tide with weekly radio addresses in which he will announce what steps the government has taken to combat the crisis."
+GER_groener1:0 "Bail out Junker Estates"
+GER_groener1_desc:0 "Liquidate unprofitable colony businesses"
 GER_groener2:0 "Reichsarbeitsdienst"
 GER_groener3:0 "The Sale of Ceylon"
 GER_groener3_desc:0 "The island of Ceylon is a very unprofitable part of our colonial empire, requiring massive investions every year. However, there have been proposals of selling the island to the Princely Federation - without doubt a profitable idea."
-GER_schacht1:0 "Bail out Junker Estates"
+GER_schacht1:0 ""
 GER_schacht1_desc:0 ""
 GER_schacht2:0 "Investitionsprogramm"
 GER_schacht2_desc:0 ""
@@ -196,6 +198,8 @@ GER_schleicher:0 "Schleicher's Kamarilla"
 GER_schleicher_desc:0 ""
 GER_restore_country_rights:0 "Restore the Bundesrat"
 GER_restore_country_rights_desc:0 ""
+GER_babelsberg:0 "Expand Babelsberg"
+GER_babelsberg_desc:0 ""
 
 ### Domestic Events
 
@@ -952,12 +956,16 @@ GER_col:0 "Colonial Upkeep"
 GER_mil_mis:0 "German Military Mission"
 GER_quenched_militarism:0 "Quenched Militarism"
 GER_renwed_militarism:0 "Renewed Militarism"
-GER_awoken_militarism:0 "Awoken Militarism"
 GER_research_boost:0 "Research Funding"
 GER_victors_of_wwi:0 "Victors of the Weltkrieg"
 GER_tank_idea:0 "Investment in Panzers"
 GER_tirpitz_idea:0 "Tirpitzprogramm"
 GER_junkers_lost_idea:0 "Problems with Grain Supply"
+GER_easter_promises:0 "Easter Promises"
+GER_bundesrat_idea:0 "Restored Bundestag"
+GER_post_idea:0 "German Post Office"
+GER_embrace_faud_idea:0 "Freie Arbeiterunion Deutschlands"
+DCGB:0 "Deutscher Christlicher Gewerkschaftsbund"
 
 ### Tooltips
 GER_mackensen_retires:0 "You can now reform the military command"
@@ -985,6 +993,8 @@ GER_women_suffrage_tp:0 "Awareness of the issue of Women Suffrage will rise."
 GER_women_suffrage_high_tp:0 "Awareness of the issue of Women Suffrage will rise a lot."
 GER_halbstarke:0 "Problems with Halbstarke"
 navy_1934_complete:0 "1934 Navy Program completed"
+GER_parlamentsvertrauen_tp:0 "Election results will determine governments."
+GER_disband_reichstag_tp:0 "Elections will not be held."
 
 ### Opinion Modifiers
 sri_lanka:0 "Imperialist Bastard"
